# freqtrade-binance-extended

./: Freqtrade安装教程.md  Freqtrade项目结构分析与K线数据扩展方案.md  README.md  pyproject.toml  币安K线数据API文档.md  项目数据源码修改说明.md
freqtrade/: __init__.py  constants.py
freqtrade/data/: dataprovider.py
freqtrade/data/converter/: converter.py
freqtrade/exchange/: binance_public_data.py  exchange.py
freqtrade/optimize/: backtesting.py
ft_client/freqtrade_client/: __init__.py
