[build-system]
requires = ["setuptools >= 64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freqtrade-binance-extended"
dynamic = ["version"]

authors = [
  {name = "Freqtrade Team"},
  {name = "Freqtrade Team", email = "freqtrade@protonmail.com"},
]

description = "Freqtrade - Crypto Trading Bot with Extended Binance K-line Data Support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv3"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/fm0668/freqtrade-binance-extended"
Documentation = "https://freqtrade.io"
"Bug Tracker" = "https://github.com/fm0668/freqtrade-binance-extended/issues"